--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "@web3-react/core": "^8.2.0",
     "@web3-react/gnosis-safe": "^8.2.1",
     "@web3-react/metamask": "^8.2.1",
-    "@web3-react/walletconnect-v2": "^8.3.6",
     "@web3-react/types": "^8.2.0",
+    "@web3-react/walletconnect-v2": "^8.3.6",
     "@zag-js/combobox": "^0.16.0",
     "@zag-js/react": "^0.16.0",
     "chakra-react-select": "^4.5.0",
@@ -72,6 +72,7 @@
     "idb-keyval": "^6.2.0",
     "js-confetti": "^0.11.0",
     "lexical": "^0.12.0",
+    "lodash": "^4.17.21",
     "next": "^12.3.4",
     "notion-client": "^6.15.6",
     "phosphor-react": "^1.4.1",
